video banner chagnes

--- a/css/main.css
+++ b/css/main.css
@@ -106,11 +106,10 @@ tr:nth-child(even) {
     align-items: flex-start;
 }
 .full-screen-video-content {
-    background-color: white;
-    color: #333;
-    padding:20px;
-    font-size: 20px;
-    margin-top:100px;
+    color: #f4f4f4;
+    padding:2px;
+    font-size: 3vw;
+    margin-top:250px;
 }
 .full-screen-video-container video{
     z-index: -1;
@@ -135,9 +134,11 @@ tr:nth-child(even) {
     filter: grayscale(100%);
     transition: 1s;
 }
+.gallery img:hover{
     filter: grayscale(0);
     transform:scale(1.1);
 }
+
 @media (max-width:600px){
     #content_aside{
         float: none;
